--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login_activity"></activity>
+        <activity android:name=".login_activity" />
+        <activity
+            android:name=".add_ad"
+            android:label="@string/title_activity_add_ad"></activity>
     </application>
 
 </manifest>
