--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="farkasnorbert.sapientia.ms.androidprojekt">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +22,8 @@
         <activity android:name=".login_activity" />
         <activity
             android:name=".add_ad"
-            android:label="@string/title_activity_add_ad"></activity>
+            android:label="@string/title_activity_add_ad">
+        </activity>
     </application>
 
 </manifest>
