--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="farkasnorbert.sapientia.ms.androidprojekt">
+
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
@@ -22,8 +23,10 @@
         <activity android:name=".login_activity" />
         <activity
             android:name=".add_ad"
-            android:label="@string/title_activity_add_ad">
-        </activity>
+            android:label="@string/title_activity_add_ad"></activity>
+        <activity
+            android:name=".ads"
+            android:label="@string/title_activity_ads"></activity>
     </application>
 
 </manifest>
