--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="farkasnorbert.sapientia.ms.androidprojekt">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:allowBackup="true"
@@ -15,25 +15,23 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login_activity"/>
+        <activity android:name=".login" />
         <activity
             android:name=".add_ad"
-            android:label="@string/title_activity_add_ad"/>
+            android:label="@string/title_activity_add_ad" />
         <activity
             android:name=".ads"
-            android:label="@string/title_activity_ads"/>
+            android:label="@string/title_activity_ads" />
         <activity
             android:name=".settings"
-            android:label="@string/title_activity_settigs">
-        </activity>
-        <activity
-            android:name=".adview">
-        </activity>
+            android:label="@string/title_activity_settigs"></activity>
+        <activity android:name=".adview"></activity>
+        <activity android:name=".register"></activity>
     </application>
 
 </manifest>
